# deid

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  _config.yml  apidoc.sh  conf.py  docs-requirements.txt  index.html  index.rst  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  searchindex.js  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  codespell_ignore_words.txt  dev-requirements.txt
.github/workflows/: codespell.yaml  codespell.yml  docs.yaml  main.yaml  main.yml
_data/: links.yml
_layouts/: default.html
_static/: documentation_options.js
api/: genindex.html  search.html
api_docs/: Makefile
deid/: logger.py  main.py  utils.py  version.py
docs/: README.md  _config.yml  apidoc.sh  client.md  config.md  developer.md  get.md  getting-started.md  ideas.md  loading.md  pixels.md  put.md  recipe.md  tags.md
examples/: README.md
pages/: changelog.html  index.md
source/: deid.data.html  deid.dicom.actions.html  deid.dicom.actions.rst  deid.dicom.html  deid.dicom.pixels.html  deid.html  deid.logger.html  deid.logger.rst
tests/: Xtest_dicom_header.py  common.py  test_clean.py  test_clean_pixel_dimensions.py  test_config.py  test_data.py  test_deid_recipe.py  test_dicom_fields.py  test_dicom_funcs.py  test_dicom_groups.py  test_dicom_tags.py  test_dicom_utils.py  test_file_meta.py  test_filter_detect.py  test_replace_identifiers.py  test_utils.py  test_utils_files.py  tests_commons.py
(+271 files in other folders)
