[metadata]
description-file = README.md

[codespell]
skip = lunr.min.js
ignore-words = .github/codespell_ignore_words.txt

[coverage:run]
branch = true
source =
   deid/config
   deid/data
   deid/dicom
   deid/logger
   deid/main
   deid/utils

[coverage:report]
show_missing = true
fail_under = 50
