[flake8]
exclude = benchmarks docs
max-line-length = 100
ignore = E1 E2 E5 W5
per-file-ignores =
    deid/dicom/__init__.py:F401
    deid/utils/__init__.py:F401
    deid/config/__init__.py:F401
    deid/main/__init__.py:F401
    deid/logger/__init__.py:F401
    deid/dicom/actions/__init__.py:F401
    deid/dicom/pixels/__init__.py:F401

[metadata]
description-file = README.md

[codespell]
skip = lunr.min.js
ignore-words = .github/codespell_ignore_words.txt

[coverage:run]
branch = true
source =
   deid/config
   deid/data
   deid/dicom
   deid/logger
   deid/main
   deid/utils

[coverage:report]
show_missing = true
fail_under = 50
